--- a/TP8_GRUPO_2/TP8_G2_Vistas.csproj
+++ b/TP8_GRUPO_2/TP8_G2_Vistas.csproj
@@ -73,7 +73,6 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DB.cs" />
     <Compile Include="AgregarSucursal.aspx.cs">
       <DependentUpon>AgregarSucursal.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -105,6 +104,12 @@
     <None Include="Web.Release.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Negocio\TP8_G2_Negocio.csproj">
+      <Project>{de5a4d0d-a363-4d9f-b257-93fdf696821d}</Project>
+      <Name>TP8_G2_Negocio</Name>
+    </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
