--- a/DAO/TP8_G2_DAO.csproj
+++ b/DAO/TP8_G2_DAO.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DaoProvincia.cs" />
     <Compile Include="DaoSucursal.cs" />
     <Compile Include="DB.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
