--- a/Entidades/TP8_G2_Entidades.csproj
+++ b/Entidades/TP8_G2_Entidades.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Provincia.cs" />
     <Compile Include="Sucursal.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
