--- a/Negocio/TP8_G2_Negocio.csproj
+++ b/Negocio/TP8_G2_Negocio.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="NegocioProvincia.cs" />
     <Compile Include="NegocioSucursal.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
